# playground-rs

./: .gitignore  Cargo.toml  results.tsv
antlr-calc/: Cargo.toml
antlr-calc/src/: calc_parser.rs  calc_parser_v3.rs  lib.rs  main.rs
antlr-calc/src/grammar/: labeledexprbaselistener.rs  labeledexprbasevisitor.rs  labeledexprlexer.rs  labeledexprlistener.rs  labeledexprparser.rs  labeledexprvisitor.rs  mod.rs
ast/: Cargo.toml  README.md
autosearch/: Cargo.toml  README.md  RESULT.md  eval.sh  program.md
math/: Cargo.toml
math/src/: Math.interp  MathLexer.interp  main.rs  mathbaselistener.rs  mathbasevisitor.rs  mathlexer.rs  mathlistener.rs  mathparser.rs  mathvisitor.rs
parsing/: Cargo.toml
parsing/benches/: regex.rs  ring.rs
parsing/src/: lib.rs  main.rs  regex.rs  test_commons.rs  winnow.rs
pattern-visitor/: Cargo.toml
pattern-visitor/src/: main.rs
pattern-visitor/src/syntax/: ast.rs  grammar.rs  mod.rs  visit.rs
prop/: Cargo.toml
prop/src/: lib.rs  main.rs
prop/src/grammar/: mod.rs  propcalc.interp  propcalcLexer.interp  propcalcbaselistener.rs  propcalcbasevisitor.rs  propcalclexer.rs  propcalclistener.rs  propcalcparser.rs  propcalcvisitor.rs
src/: main.rs  target.rs
thumbnail/: Cargo.toml
thumbnail/src/: main.rs
tptp/: Cargo.toml
tptp/src/: grammar.rs  lib.rs  main.rs  tptp.rs  tptp_parser.rs
tptp/src/grammar/: TPTP.g4  TPTP.interp  TPTP.tokens  TPTPLexer.interp  mod.rs  tptp_v7_0_0_0.interp  tptp_v7_0_0_0Lexer.interp  tptp_v7_0_0_0baselistener.rs  tptp_v7_0_0_0basevisitor.rs  tptp_v7_0_0_0lexer.rs  (+9 more)
web-scrapping/: Cargo.toml
(+2 files in other folders)
