[package]
name = "playground-rs"
version = "0.1.0"
authors = ["Olivier ROLAND <newca12@users.noreply.github.com>"]
edition = "2021"
license = "GPL-3.0-or-later"

[workspace]
members = [
    "antlr-calc",
    "ast",
    "math",
    "parsing",
    "pattern-visitor",
    "prop",
    "thumbnail",
    "tptp",
    "web-scrapping",
]
