[package]
name = "parsing"
version = "0.1.0"
authors = ["Olivier ROLAND <newca12@users.noreply.github.com>"]
edition = "2021"

[dependencies]
criterion = "0.5.1"
once_cell = "1.19.0"
regex = "1.10.4"
winnow =  {version="0.6.6"}

[profile.dev]
split-debuginfo = "unpacked"

[[bench]]
name = "ring"
harness = false