[package]
name = "playground-rs"
version = "0.1.0"
authors = ["Olivier ROLAND <newca12@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.12.0"