[package]
name = "web-scrapping"
version = "0.1.0"
authors = ["Olivier ROLAND <newca12@users.noreply.github.com>"]
edition = "2024"

[dependencies]
reqwest = { version = "0.13.1", features = ["json"] }
scraper = "0.25.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.48.0", features = ["full"] }
